--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^3.0.1
   font_awesome_flutter: ^10.2.1
   animated_text_kit: ^4.2.2
+  firebase_core: ^2.1.0
+  firebase_auth: ^4.0.2
 
 dev_dependencies:
   flutter_test:
