Added log in and sign out pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   firebase_core: ^2.1.0
   firebase_auth: ^4.0.2
+  email_auth: ^1.0.0
+  pinput: ^2.2.16
 
 dev_dependencies:
   flutter_test:
