1.Added phone authentication and fixed it's bugs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/images/google.json
     - assets/images/register.json
     - assets/images/register2.json
+    - assets/images/otp.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
